--- a/src/components/Tag.css
+++ b/src/components/Tag.css
@@ -1,9 +1,11 @@
 .tag {
-  font-size: 14px;
+  font-family: "OngleipParkDahyeon";
+  font-size: 20px;
   font-weight: 500;
   background-color: #f9f9f9;
   border: 1px solid #dfe3e6;
   border-radius: 5px;
   margin-right: 10px;
+  padding: 5px;
   cursor: pointer;
 }
