--- a/src/components/TaskCard.css
+++ b/src/components/TaskCard.css
@@ -8,7 +8,7 @@
 }
 
 .task_text {
-  font-size: 18px;
+  font-size: 30px;
   font-weight: 600;
   margin-bottom: 15px;
 }
@@ -30,6 +30,7 @@
 
 .delete_icon {
   width: 20px;
+  height: 30px;
   opacity: 50%;
   transition: all 0.3s ease-in-out;
 }
