--- a/src/components/TaskForm.css
+++ b/src/components/TaskForm.css
@@ -10,7 +10,8 @@
 }
 
 .task_input {
-  font-size: 20px;
+  font-family: "OngleipParkDahyeon";
+  font-size: 30px;
   font-weight: 500;
   background-color: #f9f9f9;
   color: #000;
@@ -32,17 +33,19 @@
 }
 
 .task_status {
-  font-size: 16px;
+  font-family: "OngleipParkDahyeon";
+  font-size: 20px;
   font-weight: 500;
   border: 1px solid #999;
   border-radius: 5px;
-  width: 120px;
+  width: 80px;
   height: 40px;
   padding: 0 5px;
 }
 
 .task_submit {
-  font-size: 16px;
+  font-family: "OngleipParkDahyeon";
+  font-size: 20px;
   font-weight: 500;
   background-color: #6457f9;
   color: #fff;
